<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="50dp"
    android:background="#03A9F4">


    <LinearLayout
        android:layout_width="379dp"

        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/txtNombre" />

        <TextView
            android:id="@+id/txtCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/txtCategoria" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/txtPrecio" />

        <TextView
            android:id="@+id/txtCantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/txtCantidad" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtUbicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/txtUbicacion" />

        <TextView
            android:id="@+id/txtCodBarra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/txtCodBarra" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnEditar"
            android:layout_marginEnd="15dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/edit_7955403"
            android:text="@string/btnEditar" />

        <Button
            android:id="@+id/btnDetalles"
            android:layout_marginEnd="15dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/btnDetalles"
            android:background="@drawable/search_7955399"/>

        <Button
            android:id="@+id/btnEliminar"
            android:layout_marginEnd="15dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/btnEliminar"
            android:background="@drawable/delete_7955387"/>
    </LinearLayout>

</LinearLayout>